documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32NET.VB

    Public Declare Function AX1_RPC_EventConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_EventConfig@8" (ByVal configval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_EventGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_EventGetConfig@8" (ByRef pconfigval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_FlashClose Lib "AX1W32.DLL" Alias "_AX1_RPC_FlashClose@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_FlashErase Lib "AX1W32.DLL" Alias "_AX1_RPC_FlashErase@8" (ByVal blocknum As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_FlashOpen Lib "AX1W32.DLL" Alias "_AX1_RPC_FlashOpen@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_FlashRead Lib "AX1W32.DLL" Alias "_AX1_RPC_FlashRead@16" (ByRef buf As Byte, ByVal addrval As Integer, ByVal length As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_FlashWrite Lib "AX1W32.DLL" Alias "_AX1_RPC_FlashWrite@16" (ByRef buf As Byte, ByVal addrval As Integer, ByVal length As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_FrameGapConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_FrameGapConfig@16" (ByVal configval As Integer, ByVal busnum As Short, ByVal gapval As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_IicRdL Lib "AX1W32.DLL" Alias "_AX1_RPC_IicRdL@16" (ByRef data As Integer, ByVal devaddr As Byte, ByVal count As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_IicWrL Lib "AX1W32.DLL" Alias "_AX1_RPC_IicWrL@16" (ByRef data As Integer, ByVal devaddr As Byte, ByVal count As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_IntTrig Lib "AX1W32.DLL" Alias "_AX1_RPC_IntTrig@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_MemRdL Lib "AX1W32.DLL" Alias "_AX1_RPC_MemRdL@12" (ByRef data As Integer, ByVal addr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_MemRdsB Lib "AX1W32.DLL" Alias "_AX1_RPC_MemRdsB@16" (ByVal addr As Integer, ByVal length As Integer, ByRef data As Byte, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_MemRdsL Lib "AX1W32.DLL" Alias "_AX1_RPC_MemRdsL@16" (ByVal addr As Integer, ByVal length As Integer, ByRef data As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_MemWrL Lib "AX1W32.DLL" Alias "_AX1_RPC_MemWrL@12" (ByVal data As Integer, ByVal addr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_MIBGetNetInfo Lib "AX1W32.DLL" Alias "_AX1_RPC_MIBGetNetInfo@20" (ByVal mibtype As Short, ByVal busnum As Short, ByRef data As Byte, ByVal length As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_MIBGetPortInfo Lib "AX1W32.DLL" Alias "_AX1_RPC_MIBGetPortInfo@16" (ByVal hport As Integer, ByRef data As Byte, ByVal length As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_MIBGetVLInfo Lib "AX1W32.DLL" Alias "_AX1_RPC_MIBGetVLInfo@20" (ByVal hvl As Integer, ByVal mibtype As Short, ByRef data As Byte, ByVal length As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_NetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_NetConfig@20" (ByVal configval As Integer, ByVal netid As Short, ByVal macconst As Integer, ByVal speed As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_NetFlood Lib "AX1W32.DLL" Alias "_AX1_RPC_NetFlood@12" (ByVal bEnable As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_NetGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_NetGetConfig@12" (ByRef pconfigval As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_NetGetVLCount Lib "AX1W32.DLL" Alias "_AX1_RPC_NetGetVLCount@12" (ByVal netid As Short, ByRef pvlcount As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_NetSetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_NetSetConfig@12" (ByVal configval As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_NetSetInterfaceID Lib "AX1W32.DLL" Alias "_AX1_RPC_NetSetInterfaceID@16" (ByVal netid As Short, ByVal idVal As Short, ByVal flags As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ParamFrameFreq Lib "AX1W32.DLL" Alias "_AX1_RPC_ParamFrameFreq@16" (ByVal configval As Integer, ByVal percent As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ParamGetFrameFreq Lib "AX1W32.DLL" Alias "_AX1_RPC_ParamGetFrameFreq@16" (ByRef pconfigval As Integer, ByRef ppercent As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_PortConfig@32" (ByVal configval As Integer, ByVal hvl As Integer, ByVal dstid As Short, ByVal srcid As Short, ByVal depth As Short, ByVal reprate As Short, ByRef portptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortDataRd Lib "AX1W32.DLL" Alias "_AX1_RPC_PortDataRd@28" (ByVal hport As Integer, ByRef data As Byte, ByRef lengthptr As Short, ByRef rsnptr As Byte, ByRef timetaghptr As Integer, ByRef timetagptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortDataWr Lib "AX1W32.DLL" Alias "_AX1_RPC_PortDataWr@20" (ByVal hport As Integer, ByRef data As Byte, ByVal length As Short, ByVal rsn As Byte, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortGetAny Lib "AX1W32.DLL" Alias "_AX1_RPC_PortGetAny@8" (ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_PortGetConfig@12" (ByRef pconfigval As Integer, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortGetHandle Lib "AX1W32.DLL" Alias "_AX1_RPC_PortGetHandle@16" (ByVal hvl As Integer, ByVal portnum As Short, ByRef hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortGetInfo Lib "AX1W32.DLL" Alias "_AX1_RPC_PortGetInfo@32" (ByVal hport As Integer, ByRef configval As Integer, ByRef vlid As Short, ByRef dstport As Short, ByRef srcport As Short, ByRef depth As Short, ByRef reprate As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortGetNext Lib "AX1W32.DLL" Alias "_AX1_RPC_PortGetNext@20" (ByVal hvl As Integer, ByRef nextPort As Short, ByVal lastPort As Short, ByVal flag As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortGetQueueCount Lib "AX1W32.DLL" Alias "_AX1_RPC_PortGetQueueCount@12" (ByVal hport As Integer, ByRef queuecount As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortInfoRd Lib "AX1W32.DLL" Alias "_AX1_RPC_PortInfoRd@28" (ByRef timetaghptr As Integer, ByRef timetagptr As Integer, ByRef activityptr As Integer, ByRef errorptr As Integer, ByRef rsnptr As Byte, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortRawRd Lib "AX1W32.DLL" Alias "_AX1_RPC_PortRawRd@24" (ByVal hport As Integer, ByRef packet As Byte, ByRef lengthptr As Short, ByRef timetaghptr As Integer, ByRef timetagptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortRawWr Lib "AX1W32.DLL" Alias "_AX1_RPC_PortRawWr@16" (ByVal hport As Integer, ByRef packet As Byte, ByVal length As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortRd Lib "AX1W32.DLL" Alias "_AX1_RPC_PortRd@12" (ByVal hport As Integer, ByRef pktdesc As AFDXPKTDESC, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortSetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_PortSetConfig@12" (ByVal configval As Integer, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortSkipConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_PortSkipConfig@16" (ByVal hport As Integer, ByVal ctrlflags As Integer, ByVal trigid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_PortStepConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_PortStepConfig@16" (ByVal hport As Integer, ByVal ctrlflags As Integer, ByVal trigid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_RcvHostEnable Lib "AX1W32.DLL" Alias "_AX1_RPC_RcvHostEnable@8" (ByVal enableval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_RcvHostGetEnable Lib "AX1W32.DLL" Alias "_AX1_RPC_RcvHostGetEnable@8" (ByRef penableval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_RedundConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_RedundConfig@12" (ByVal configval As Integer, ByVal pairid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_RobinAddPort Lib "AX1W32.DLL" Alias "_AX1_RPC_RobinAddPort@32" (ByVal hrobin As Integer, ByVal hport As Integer, ByVal bSkip As Integer, ByVal bShot As Integer, ByVal bTxA As Integer, ByVal bTxB As Integer, ByRef hscheditem As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SchedAddNoop Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedAddNoop@20" (ByVal netid As Short, ByVal bSkip As Integer, ByVal bShot As Integer, ByRef hscheditem As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SchedAddPort Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedAddPort@32" (ByVal netid As Short, ByVal hport As Integer, ByVal bSkip As Integer, ByVal bShot As Integer, ByVal bTxA As Integer, ByVal bTxB As Integer, ByRef hscheditem As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SchedAddRobin Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedAddRobin@24" (ByVal netid As Short, ByVal hsub As Integer, ByVal bSkip As Integer, ByVal bShot As Integer, ByRef hscheditem As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SchedAddSub Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedAddSub@24" (ByVal netid As Short, ByVal hsub As Integer, ByVal bSkip As Integer, ByVal bShot As Integer, ByRef hscheditem As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SchedClear Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedClear@8" (ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SchedCrtRobin Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedCrtRobin@8" (ByRef hrobin As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SchedCrtSub Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedCrtSub@8" (ByRef hsub As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SchedFrameEnd Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedFrameEnd@8" (ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SchedFrameStart Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedFrameStart@12" (ByVal netid As Short, ByVal usframetime As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SchedItemUpdate Lib "AX1W32.DLL" Alias "_AX1_RPC_SchedItemUpdate@24" (ByVal hscheditem As Integer, ByVal bSkip As Integer, ByVal bShot As Integer, ByVal bTxA As Integer, ByVal bTxB As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SdrRdL Lib "AX1W32.DLL" Alias "_AX1_RPC_SdrRdL@12" (ByRef data As Integer, ByVal addr As Integer, ByVal handleval As Integer) As Integer
